force-app/main/default/objects/clofor_com_cfs__FTMSSOTrxPlan__c/fields/clofor_com_cfs__FTMSSOID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FTMSSOID__c</fullName>
    <label>F/TMS S/O ID</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>F/TMS S/O+TRX PLAN</relationshipLabel>
    <relationshipName>FTMSSOTrxPlan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>