force-app/main/default/objects/clofor_com_cfs__FTMSSOTrxPlan__c/fields/clofor_com_cfs__SOJobRequestID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SOJobRequestID__c</fullName>
    <formula>clofor_com_cfs__FTMSSOID__r.clofor_com_cfs__JobRequestID__c</formula>
    <label>S/O Job Request ID</label>
    <type>Text</type>
</CustomField>