force-app/main/default/objects/clofor_com_cfs__FTMSSOTrxPlan__c/fields/clofor_com_cfs__SOReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SOReferenceNumber__c</fullName>
    <formula>clofor_com_cfs__FTMSSOID__r.clofor_com_cfs__REFNO__c</formula>
    <label>S/O Reference Number</label>
    <type>Text</type>
</CustomField>