force-app/main/default/objects/clofor_com_cfs__FTMSSOTrxPlan__c/fields/clofor_com_cfs__TrxPlanID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TrxPlanID__c</fullName>
    <label>Trx Plan ID</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>clofor_com_cfs__PaymentRequest__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Liquidation Request-Local, Advance Payment Request-Local</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__PaymentRequest__c</referenceTo>
    <relationshipLabel>F/TMS S/O+TRX PLAN</relationshipLabel>
    <relationshipName>FTMSSOTrxPlan</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>